# sdkey-python

./: .gitignore  LICENSE  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic.py
src/sdkey/: __init__.py  client.py  errors.py  hwid.py  types.py
src/sdkey/crypto/: __init__.py  canonical_json.py  constants.py  encoding.py  seal.py
tests/: test_canonical_json.py  test_client.py  test_hwid.py  test_seal.py
