[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdkey"
version = "0.1.1"
description = "Official Python client for the SDKey license authentication protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SDKey" }]
keywords = ["sdkey", "license", "authentication", "ed25519", "aes-gcm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://docs.sdkey.dev"
Repository = "https://github.com/SDKeyDev/sdkey-python"
Issues = "https://github.com/SDKeyDev/sdkey-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/PROTOCOL.md",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
